--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -17,6 +17,7 @@
     "ioredis": "^5.5.0",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
+    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
