--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^6.12.1",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "@stripe/stripe-js": "^5.7.0",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ioredis": "^5.5.0",
@@ -20,6 +22,7 @@
     "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
